added: nest쪽과 마찬가지로 hashId 컬럼에 추가